[project]
name = "perco-webform"
version = "0.1.0"
description = ""
authors = [
    {name = "Ramil",email = "undassynovramil@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "mysql-connector-python (>=9.4.0,<10.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]

[tool.poetry]
packages = [{include = "perco_webform", from = "src"}]

[tool.poetry.scripts]
perco-webform = "perco_webform.app:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
