[tool.poetry]
name = "perco-webform"
version = "0.1.0"
description = ""
authors = ["Ramil <undassynovramil@gmail.com>"]
readme = "README.md"
packages = [{ include = "perco_webform", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.13"
flask = ">=3.1.2,<4.0.0"
mysql-connector-python = ">=9.4.0,<10.0.0"
dotenv = ">=0.9.9,<0.10.0"
requests = ">=2.32.5,<3.0.0"
gunicorn = ">=23.0.0,<24.0.0"
flask-limiter = ">=3.12,<4.0"

[tool.poetry.scripts]
perco-webform = "perco_webform.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

